// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`steinerHelper createApi it merge params if needed 1`] = `
Object {
  "baz": "qux",
  "foo": "bar",
}
`;

exports[`steinerHelper createApi it uses default params if no other are set 1`] = `
Object {
  "baz": "qux",
}
`;

exports[`steinerHelper createApi it uses user defined params if not 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`steinerHelper createDefaultState returns the custom state 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 50,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState returns the custom state even if a default is provided 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 15,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState returns the default state defined in the reducer 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 20,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState uses default values if defined 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 30,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper getCreateSagasOptions returns actionMessages options if defined as messages 1`] = `
Object {
  "messages": Object {
    "en": Object {
      "createFail": "Hooray!",
      "createSuccess": "Boooo",
    },
  },
}
`;

exports[`steinerHelper getCreateSagasOptions returns undefined if no helper options are defined 1`] = `
Object {
  "messages": undefined,
}
`;
